Add materialize and static file

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ALTER</title>
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}   
+
     {% for task in tasks %}
         {{ task.task_pnr }}<br>
         {{ task.pax_name }}<br>
@@ -14,5 +9,5 @@
         {{ task.date_issue }}<br>
         {{ task.is_refunded }}<br>
     {% endfor %}
-</body>
-</html>
+
+{% endblock %}
