--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,38 @@
     <title>ALTER</title>
 </head>
 <body>
+
+    <header>
+
+        <!-- top navbar -->
+        <nav class="nav-extended nav-text  orange lighten-2">
+            <div class="nav-wrapper">
+                <a href="{{ url_for('get_tasks') }}" class="brand-logo">A L T E R</a>
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
+                <ul class="right hide-on-med-and-down">
+                
+                    <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
+                    <li><a href="">Profile</a></li>
+                    <li><a href="">Add Booking</a></li>
+                    <li><a href="">Log In</a></li>                    
+                    <li><a href="">Log Out</a></li>
+                    <li><a href="">Sign Up</a></li>                   
+                    
+                </ul>
+            </div>
+        </nav>
+
+        <!-- mobile navbar -->
+        <ul class="sidenav" id="mobile-demo">
+                <li><h4 class="center-align orange-text text-darken-4">A L T E R</h4></li>
+                <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
+                <li><a href="">Profile</a></li>
+                <li><a href="">Add Booking</a></li>
+                <li><a href="">Log In</a></li>                    
+                <li><a href="">Log Out</a></li>
+                <li><a href="">Sign Up</a></li>  
+        </ul>
+    </header>
     
     {% block content %} 
     {% endblock %}
@@ -22,7 +54,7 @@
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
-    
+
     {% block scripts %}
     {% endblock %}
 
