--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
                     <li><a href="">Add Booking</a></li>
                     <li><a href="">Log In</a></li>                    
                     <li><a href="">Log Out</a></li>
-                    <li><a href="">Sign Up</a></li>                   
+                    <li><a href="{{ url_for('sign_up') }}">Sign Up</a></li>                   
                     
                 </ul>
             </div>
@@ -43,7 +43,7 @@
                 <li><a href="">Add Booking</a></li>
                 <li><a href="">Log In</a></li>                    
                 <li><a href="">Log Out</a></li>
-                <li><a href="">Sign Up</a></li>  
+                <li><a href="{{ url_for('sign_up') }}">Sign Up</a></li>  
         </ul>
     </header>
     
