--- a/templates/base.html
+++ b/templates/base.html
@@ -18,18 +18,21 @@
     <header>
 
         <!-- top navbar -->
-        <nav class="nav-extended nav-text  orange lighten-2">
+        <nav class="nav-extended nav-text  orange darken-2">
             <div class="nav-wrapper">
                 <a href="{{ url_for('get_tasks') }}" class="brand-logo">A L T E R</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="fas fa-bars"></i></a>
                 <ul class="right hide-on-med-and-down">
                 
                     <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
-                    <li><a href="">Profile</a></li>
-                    <li><a href="">Add Booking</a></li>
-                    <li><a href="">Log In</a></li>                    
-                    <li><a href="">Log Out</a></li>
-                    <li><a href="{{ url_for('sign_up') }}">Sign Up</a></li>                   
+                    {% if session.user %}
+                        <li><a href="{{ url_for('agents', username=session['user']) }}">Profile</a></li>
+                        <li><a href="">Add Booking</a></li>
+                        <li><a href="{{ url_for('log_out') }}">Log Out</a></li>
+                    {% else %}
+                        <li><a href="{{ url_for('log_in') }}">Log In</a></li>                                       
+                        <li><a href="{{ url_for('sign_up') }}">Sign Up</a></li>    
+                    {% endif %}               
                     
                 </ul>
             </div>
@@ -39,11 +42,14 @@
         <ul class="sidenav" id="mobile-demo">
                 <li><h4 class="center-align orange-text text-darken-4">A L T E R</h4></li>
                 <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
-                <li><a href="">Profile</a></li>
-                <li><a href="">Add Booking</a></li>
-                <li><a href="">Log In</a></li>                    
-                <li><a href="">Log Out</a></li>
-                <li><a href="{{ url_for('sign_up') }}">Sign Up</a></li>  
+                    {% if session.user %}
+                        <li><a href="{{ url_for('agents', username=session['user']) }}">Profile</a></li>
+                        <li><a href="">Add Booking</a></li>
+                        <li><a href="{{ url_for('log_out') }}">Log Out</a></li>
+                    {% else %}
+                        <li><a href="{{ url_for('log_in') }}">Log In</a></li>                                       
+                        <li><a href="{{ url_for('sign_up') }}">Sign Up</a></li>    
+                    {% endif %}  
         </ul>
     </header>
 
