--- a/templates/login.html
+++ b/templates/login.html
@@ -1,16 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h2 class="center-align">Sign Up and add Bookings</h2>
+    <h2 class="center-align">Log In</h2>
     
     <div class="row">
-        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('sign_up') }} ">
+        <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('log_in') }} ">
             <div class="card-panel">
 
                 <!-- username -->
                 <div class="row">
                     <div class="input-field col s12">
-                        <i class="fas fa-user-plus prefix orange-text text-darken-4"></i>
+                        <i class="fas fa-user-cog prefix orange-text text-darken-4"></i>
                         <input id="username" name="username" type="text" minlength="5"
                             maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" 
                             required>
@@ -28,19 +28,10 @@
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="input-field col s12">
-                        <i class="fas fa-user-plus prefix orange-text text-darken-4"></i>
-                        <input id="location" name="location" type="text" minlength="3"
-                            maxlength="5" pattern="^[a-zA-Z0-9]{3,5}$" class="validate" 
-                            required>
-                        <label for="location">Location</label>
-                    </div>
-                </div>
                 <!-- submit -->
                 <div class="row">
                     <button type="submit" class="col s12 btn-large orange darken-4 text-shadow">
-                        Sign Up <i class="fas fa-sign-in-alt"></i>
+                        Log In <i class="fas fa-sign-in-alt"></i>
                     </button>
                 </div>
 
@@ -51,7 +42,7 @@
     <div class="row">
         <div class="col s12">
             <p class="center-align">
-                Already Registered? <a href="{{ url_for('log_in') }}" class="light-blue-text text-darken-4">Log In</a>
+                New Here? <a href="{{ url_for('sign_up') }}" class="light-blue-text text-darken-4">Sign Up</a>
             </p>
         </div>
     </div>
