--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
                     <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
                     {% if session.user %}
                         <li><a href="{{ url_for('agents', username=session['user']) }}">Profile</a></li>
-                        <li><a href="">Add Booking</a></li>
+                        <li><a href="{{ url_for('add_booking') }}">Add Booking</a></li>
                         <li><a href="{{ url_for('log_out') }}">Log Out</a></li>
                     {% else %}
                         <li><a href="{{ url_for('log_in') }}">Log In</a></li>                                       
@@ -44,7 +44,7 @@
                 <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
                     {% if session.user %}
                         <li><a href="{{ url_for('agents', username=session['user']) }}">Profile</a></li>
-                        <li><a href="">Add Booking</a></li>
+                        <li><a href="{{ url_for('add_booking') }}">Add Booking</a></li>
                         <li><a href="{{ url_for('log_out') }}">Log Out</a></li>
                     {% else %}
                         <li><a href="{{ url_for('log_in') }}">Log In</a></li>                                       
