--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}   
   
+    <h3 class="light-blue-text text-darken-4 center-align">All Bookings</h3>
+
     <ul class="collapsible popout">
         {% for task in tasks %}
         <li>
@@ -16,6 +18,7 @@
                 <p>{{ task.task_airline }}</p>
                 <p>{{ task.ticket_number }}</p>
                 <p>{{ task.date_issue }}</p>
+                <p>by: {{ task.created_by }}</p>
             </div>
         </li>
         {% endfor %}        
