--- a/templates/add_booking.html
+++ b/templates/add_booking.html
@@ -10,7 +10,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-barcode prefix light-blue-text text-darken-4"></i>
-                    <input id="task_pnr" name="task_pnr" type="text" minlength="5" maxlength="15" class="validate" required>
+                    <input id="task_pnr" name="task_pnr" type="text" minlength="6" maxlength="6" class="validate" required>
                     <label for="task_pnr">P N R</label>
                 </div>
             </div>
@@ -19,7 +19,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-address-card prefix light-blue-text text-darken-4"></i>                    
-                    <textarea id="pax_name" name="pax_name" minlength="5" maxlength="100" class="materialize-textarea" required></textarea>
+                    <textarea id="pax_name" name="pax_name" minlength="5" maxlength="100" class="materialize-textarea validate" required></textarea>
                     <label for="pax_name">Name of Passenger/s</label>
                 </div>
             </div>
@@ -28,7 +28,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fas fa-plane prefix light-blue-text text-darken-4"></i>
-                    <input id="task_airline" name="task_airline" type="text" minlength="5" maxlength="100" class="validate" required>
+                    <input id="task_airline" name="task_airline" type="text" minlength="2" maxlength="100" class="validate" required>
                     <label for="task_airline">Name of Airline/s</label>
                 </div>
             </div>
@@ -37,7 +37,8 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons light-blue-text text-darken-4 prefix">confirmation_number</i>
-                    <input id="ticket_number" name="ticket_number" type="text" minlength="5" maxlength="100" class="validate" required>
+                    <input id="ticket_number" name="ticket_number" type="text" minlength="5" 
+                        maxlength="100" pattern="^[0-9]{13,100}$" class="validate" required>
                     <label for="ticket_number">Ticket Number/s</label>
                 </div>
             </div>
@@ -68,7 +69,7 @@
             <!-- submit new booking -->
             <div class="row">
                 <div class="col s12 center-align">
-                    <button type="submit" class="btn-large light-blue darken-1 text-shadow">
+                    <button type="submit" class="btn-large light-blue darken-1 text-shadow validate">
                         Add Booking <i class="fas fa-plus-square right"></i>
                     </button>
                 </div>
