--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -11,7 +11,7 @@
                 <div class="col s3">
                     <i class="fas fa-caret-down"></i>
                     <a href="" class="btn-small green-accent-4">Completed</a>
-                    <a href="" class="btn-small light-blue lighten-1">Update</a>
+                    <a href="{{ url_for('update_booking', task_id=task._id ) }}" class="btn-small light-blue lighten-1">Update</a>
                 </div>
                 
                 <div class="col s9">
