--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -10,8 +10,10 @@
             
                 <div class="col s3">
                     <i class="fas fa-caret-down"></i>
+                    {% if session.user|lower == task.created_by|lower %}
                     <a href="" class="btn-small green-accent-4">Completed</a>
                     <a href="{{ url_for('update_booking', task_id=task._id ) }}" class="btn-small light-blue lighten-1">Update</a>
+                    {% endif %}
                 </div>
                 
                 <div class="col s9">
