--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -17,7 +17,7 @@
                 </div>
                 
                 <div class="col s9">
-                    <strong>PNR: {{ task.task_pnr }}</strong>
+                    <strong>PNR: {{ task.task_pnr|upper }}</strong>
                     {% if task.is_refunded == "on" %}
                         <i class="fas fa-exclamation-circle light-blue-text text-lighten-2 tooltipped" data-position="bottom" data-tooltip="Refunded"></i>
                     {% endif %}
@@ -25,11 +25,12 @@
 
             </div>
             <div class="collapsible-body">
-                <p>Name/s: <strong>{{ task.pax_name }}</strong></p>
-                <p>Airline/s: <strong>{{ task.task_airline }}</strong></p>
+                <p>Name/s: <strong>{{ task.pax_name|capitalize }}</strong></p>
+                <p>Airline/s: <strong>{{ task.task_airline|upper }}</strong></p>
                 <p>Ticket Number/s: <strong>{{ task.ticket_number }}</strong></p>
                 <p>Issue Date: <strong>{{ task.date_issue }}</strong></p>
-                <p>by: {{ task.created_by }}</p>
+                <p>Additional Comments: {{ task.task_comment }}</p>
+                <p>by: {{ task.created_by|capitalize }}</p>
             </div>
         </li>
         {% endfor %}        
