--- a/templates/update_booking.html
+++ b/templates/update_booking.html
@@ -81,6 +81,8 @@
                     <a href="{{ url_for('get_tasks') }} " class="btn-large red text-shadow">
                         Cancel Update <i class="fas fa-times-circle right"></i>
                     </a>
+
+                    <!-- update booking button -->
                     <button type="submit" class="btn-large light-blue darken-1 text-shadow validate">
                         Update Booking <i class="fas fa-edit right"></i>
                     </button>
